update landing page

--- a/code/public/landing/assets/css/templatemo-space-dynamic.css
+++ b/code/public/landing/assets/css/templatemo-space-dynamic.css
@@ -842,7 +842,7 @@ Banner Style
 
 .main-banner:after {
   content: '';
-  background-image: url(../images/baner-dec-left.png);
+  background-image: url(../images/baner-dec-left-2.png);
   background-repeat: no-repeat;
   position: absolute;
   left: 0;
@@ -853,7 +853,7 @@ Banner Style
 
 .main-banner:before {
   content: '';
-  background-image: url(../images/baner-dec-right.png);
+  background-image: url(../images/baner-dec-right-2.png);
   background-repeat: no-repeat;
   position: absolute;
   right: 0;
@@ -948,7 +948,7 @@ About Us Style
 }
 
 .about-us {
-  background-image: url(../images/about-bg.png);
+  background-image: url(../images/about-bg-2.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -1288,8 +1288,8 @@ contact
 */
 
 .contact-us {
-  padding: 160px 0px;
-  background-image: url(../images/contact-bg.png);
+  padding: 170px 0px;
+  background-image: url(../images/contact-bg-2.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
